<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="16dp"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/registerContentLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RegisterPageMsg"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:textSize="35sp"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/editTextDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/DisplayNameStr"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/lightGrey"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/EnterUsernameStr"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/lightGrey"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:minHeight="48dp"
            android:hint="@string/EnterPasswordStr"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/lightGrey"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:minHeight="48dp"
            android:hint="@string/ConfirmPasswordStr"
            android:textColor="@color/lightGrey"
            android:textColorHint="@color/lightGrey"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circle_background"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_default_user_pic" />

            <Button
                android:id="@+id/btnUploadProfileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/lightGrey"
                android:text="@string/UploadPictureBtn"
                android:textColor="@color/red" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:minHeight="48dp"
            android:textSize="16sp"
            android:text="@string/RegisterBtn"
            android:textColor="@color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>