<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_info_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground"
    tools:context=".activities.MovieInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Navbar (Toolbar) -->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolBarTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:elevation="4dp">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_logo">

            </ImageView>

            <!-- Category Button -->
            <Button
                android:id="@+id/category_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/search_btn_description"
                android:text="@string/categories_btn"
                android:textColor="@color/white"
                android:textSize="12sp">

            </Button>

            <!-- Switch Theme Mode -->
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:thumb="@drawable/thumb"
                app:track="@drawable/track" />

            <!-- Search Button -->
            <ImageView
                android:id="@+id/search_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:contentDescription="@string/search_btn_description"
                android:src="@drawable/ic_search">

            </ImageView>

            <ImageView
                android:id="@+id/logout"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/logout_btn_description"
                android:src="@drawable/ic_logout">

            </ImageView>
            <!-- Move To HomePage Button-->
            <ImageView
                android:id="@+id/back_home"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:layout_gravity="end"
                android:contentDescription="@string/home_button_description"
                android:src="@drawable/ic_home">

            </ImageView>

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/Image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            android:scaleType="centerCrop">

        </ImageView>

        <!-- Play Button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/play"
            android:textColor="@color/black"
            android:textSize="16sp" >

        </Button>

        <!-- Movies RecyclerView -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_like_this"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="8dp"
            android:background="@color/black"
            android:textAlignment="viewStart"
            android:textStyle="bold">

        </TextView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:clipToPadding="false" >

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

