<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground"
    tools:context=".activities.HomeAfterLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Navbar (Toolbar) -->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolBarTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:elevation="4dp">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_logo"
                android:layout_gravity="start">

            </ImageView>

            <!-- Category Button -->
            <Button
                android:id="@+id/category_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/category_btn_description"
                android:text="@string/categories_btn"
                android:textColor="@color/white"
                android:textSize="12sp">

            </Button>

            <!-- Switch Theme Mode -->
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:thumb="@drawable/thumb"
                app:track="@drawable/track" />

            <!-- Search Button -->
            <ImageView
                android:id="@+id/search_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_margin="8dp"
                android:contentDescription="@string/search_btn_description"
                android:src="@drawable/ic_search">

            </ImageView>

            <ImageView
                android:id="@+id/logout"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/logout_btn_description"
                android:layout_gravity="end"
                android:src="@drawable/ic_logout">

            </ImageView>
            <!-- Admin Manager Screen -->
            <ImageView
                android:id="@+id/admin_manager"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:layout_gravity="end"
                android:contentDescription="@string/admin_editor_btn_description"
                android:src="@drawable/ic_admin">
            </ImageView>

        </androidx.appcompat.widget.Toolbar>

        <VideoView
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="8dp" />

        <!-- Movies RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:padding="8dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>


</androidx.constraintlayout.widget.ConstraintLayout>