<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground"
    tools:context=".activities.SearchResultsActivity">

    <!-- Your other views go here -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Navbar (Toolbar) -->

        <!-- Search View Button-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:elevation="4dp"
            style="@style/ToolBarTextColor">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="10dp"
                android:layout_gravity="start"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_logo">

            </ImageView>

            <!-- Category Button -->
            <Button
                android:id="@+id/category_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/category_btn_description"
                android:text="@string/categories_btn"
                android:textColor="@color/white"
                android:textSize="14sp">

            </Button>
            <!-- Switch Theme Mode -->
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:thumb="@drawable/thumb"
                app:track="@drawable/track" />
            <!-- Move To HomePage Button-->
            <ImageView
                android:id="@+id/back_home"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/home_button_description"
                android:src="@drawable/ic_home">

            </ImageView>
            <ImageView
                android:id="@+id/logout"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/logout_btn_description"
                android:layout_gravity="end"
                android:src="@drawable/ic_logout">

            </ImageView>
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/black"
            android:iconifiedByDefault="false"
            android:queryHint="Search...">

        </androidx.appcompat.widget.SearchView>
        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Movies RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:padding="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
