<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_admin_layout"
    style="@style/ScreenBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainAdminActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <!-- Navbar (Toolbar) -->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolBarTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logo"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/ic_logo">

            </ImageView>


            <!-- Category Button -->
            <Button
                android:id="@+id/category_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/category_btn_description"
                android:text="@string/categories_btn"
                android:textColor="@color/white"
                android:textSize="12sp">

            </Button>

            <!-- Switch Theme Mode -->
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumb="@drawable/thumb"
                app:track="@drawable/track"
                 />

            <!-- Search Button -->
            <ImageView
                android:id="@+id/search_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:contentDescription="@string/search_btn_description"
                android:src="@drawable/ic_search">

            </ImageView>

            <!-- Move To HomePage Button-->
            <ImageView
                android:id="@+id/back_home"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:contentDescription="@string/home_button_description"
                android:src="@drawable/ic_home">

            </ImageView>

            <ImageView
                android:id="@+id/logout"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end"
                android:layout_margin="5dp"
                android:contentDescription="@string/logout_btn_description"
                android:src="@drawable/ic_logout">

            </ImageView>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView2"
            style="@style/ToolBarTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkGrey"
            android:gravity="center"
            android:text="@string/editing_mode"
            android:textSize="32sp"
            android:textStyle="bold">
        </TextView>

        <!-- Add Button -->


        <Button
            android:id="@+id/add_category_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#E50914"
            android:stateListAnimator="@null"
            android:text="Add Category"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <!-- Edit Button  -->
        <Button
            android:id="@+id/add_movie_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#E50914"
            android:stateListAnimator="@null"
            android:text="Add Movie"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <!-- Edit Movie Button  -->
        <Button
            android:id="@+id/edit_category_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/shinyRed"
            android:stateListAnimator="@null"
            android:text="Edit Category"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        <Button
            android:id="@+id/edit_movie_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#E50914"
            android:stateListAnimator="@null"
            android:text="Edit Movie"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        <Button
            android:id="@+id/delete_category_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#E50914"
            android:stateListAnimator="@null"
            android:text="Delete Category"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
        <Button
            android:id="@+id/delete_movie_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#E50914"
            android:stateListAnimator="@null"
            android:text="Delete Movie"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>